--- a/README.adoc
+++ b/README.adoc
@@ -27,6 +27,11 @@ Open Prometheus instance in browser : http://localhost:9090/ +
 If needed, check the target's status here : http://localhost:9090/targets +
 To make a quick test, you can check the `rabbitmq_queues` metric here : http://localhost:9090/graph?g0.expr=rabbitmq_queues
 
+=== Grafana instance
+
+Open Grafana instance in browser : http://localhost:3000/ +
+Go to dashboards and open _RabbitMQ_ folder : http://localhost:3000/dashboards
+
 == References
 
 === Documentation
